css/biblePreviewer.scss
$toolbar-bg-color: #0871d7;
$toolbar-fg-color: white;
$popup-fg-color: black;
$popup-color: whitesmoke;
$arrow-color: $toolbar-bg-color;

.biblePreviewerContainer {
  display: inline-block;
}

.biblePreviewerLink {
  cursor: pointer;
}

.tippy-box {
  background-color: unset !important;
  border-radius: 10px;

  &[data-placement^="top"] > .tippy-arrow::before {
    border-top-color: $arrow-color !important;
  }

  &[data-placement^="bottom"] > .tippy-arrow::before {
    border-bottom-color: $arrow-color !important;
  }

  &[data-placement^="left"] > .tippy-arrow::before {
    border-left-color: $arrow-color !important;
  }

  &[data-placement^="right"] > .tippy-arrow::before {
    border-right-color: $arrow-color !important;
  }

  .tippy-content {
    background-color: $popup-color !important;
    padding: 0 0 5px 0;
    color: $popup-fg-color;
    border-radius: 10px;
    border: 2px solid $toolbar-bg-color;
  }
}

.biblePreviewerTooltip {
  .bpHeaderBar {
    background-color: $toolbar-bg-color;
    padding: 3px 20px;
    color: $toolbar-fg-color;
    text-align: left;
    border-radius: 10px 10px 0 0;
    border: 0;
    display: flex;
    align-items: center;

    .bpVerse {
      font-size: 16px;
      display: inline-block;
      flex: 1 0 auto;
    }

    .bpTranslation {
      background-color: $toolbar-bg-color;
      text-align: right;
      font-variant: small-caps;
      display: inline-block;
      padding-left: 10px;
      font-size: 12px;
      flex: 0 1 auto;
    }
  }

  .bpTooltipContent {
    max-width: none;
    max-height: 300px;
    padding: 10px 20px;
    text-align: left;
    overflow-x: hidden;
    overflow-y: auto;
    font-style: normal;

    h2 {
      margin: 5px 0;
      font-size: 1.4em;
      font-weight: 600;
    }

    h3 {
      margin: 0 0 5px;
      font-size: 1em;
      font-weight: 600;
    }

    p {
      margin: 0;
      display: inline;
      font-size: 18px;
      line-height: 1;
    }

    span.v {
      vertical-align: super;
      font-style: italic;
      font-size: 60%;
      padding: 0 2px 0 4px;
    }

    span.nd {
      font-variant: small-caps;
    }
  }

  .bpTooltipArrow {
    width: 0;
    height: 0;
    border: 10px solid transparent;
    position: absolute;
    margin: 0;
  }
}

.refreshBiblePreview {
  width: 300px;
  background-color: limegreen;
  padding: 10px;
  text-align: center;
  color: white;
  font-size: 16px;
  font-weight: bold;
  cursor: pointer;
  border-radius: 5px;
}

